removed height:100vh from the site-wrapper  because it caused a bug where you'd see white space under the footer in some conditions

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@
 .site-wrapper {
   position:relative;
   overflow-x:hidden;
-  height:100vh;
+  /* height:100vh; */
 }
 
 
